oriterm_core/tests/teseq/harness/snapshots/teseq__harness__assertions__mode_interactions_altscreen_roundtrip_grid.snap
---
source: oriterm_core/tests/teseq/harness/assertions.rs
expression: outcome.grid_text
---
Primary screen content                                                          
Line two
