oriterm_core/tests/teseq/harness/snapshots/teseq__harness__assertions__mode_interactions_cross_1049_with_decom_decstbm_grid.snap
---
source: oriterm_core/tests/teseq/harness/assertions.rs
expression: outcome.grid_text
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
Origin content
