oriterm_core/tests/teseq/harness/snapshots/teseq__harness__assertions__mode_interactions_cross_irm_at_margin_with_decawm_grid.snap
---
source: oriterm_core/tests/teseq/harness/assertions.rs
expression: outcome.grid_text
---
                                                                              XY
