oriterm_core/tests/teseq/harness/snapshots/teseq__harness__assertions__mode_interactions_cross_scrollback_after_decstbm_overflow_grid.snap
---
source: oriterm_core/tests/teseq/harness/assertions.rs
expression: outcome.grid_text
---
Line A                                                                          
X2ne C                                                                          
X3
