oriterm_core/tests/teseq/harness/snapshots/teseq__harness__assertions__mode_interactions_deccolm_80_to_132_grid.snap
---
source: oriterm_core/tests/teseq/harness/assertions.rs
expression: outcome.grid_text
---
Now at 132 columns
