oriterm_core/tests/teseq/harness/snapshots/teseq__harness__assertions__mode_interactions_dl_in_scroll_region_grid.snap
---
source: oriterm_core/tests/teseq/harness/assertions.rs
expression: outcome.grid_text
---
Line 1                                                                          
Line 2                                                                          
Line 4                                                                          
Line 5                                                                          
                                                                                
Line 6
